[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/test.gd" type="Script" id=1]
[ext_resource path="res://assets/sand.png" type="Texture" id=2]
[ext_resource path="res://anims/desert.tres" type="Animation" id=3]

[node name="desert" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.7, 0.7 )
z/z = -2
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/play = ExtResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "play"

[node name="Position2D1" type="Position2D" parent="."]

transform/pos = Vector2( 0, -110.497 )

[node name="Position2D2" type="Position2D" parent="."]

transform/pos = Vector2( 76.1199, -93.3082 )

[node name="Position2D3" type="Position2D" parent="."]

transform/pos = Vector2( 120.318, -44.1986 )

[node name="Position2D4" type="Position2D" parent="."]

transform/pos = Vector2( -73.6644, -98.2192 )

[node name="Position2D5" type="Position2D" parent="."]

transform/pos = Vector2( -106.813, -46.6541 )

[node name="Position2D6" type="Position2D" parent="."]

transform/pos = Vector2( -125.229, 6.1387 )

[node name="Position2D7" type="Position2D" parent="."]

transform/pos = Vector2( 124.002, 11.0497 )

[node name="Position2D8" type="Position2D" parent="."]

transform/pos = Vector2( 109.269, 65.0702 )

[node name="Position2D9" type="Position2D" parent="."]

transform/pos = Vector2( -104.358, 61.387 )

[node name="Position2D10" type="Position2D" parent="."]

transform/pos = Vector2( -56.476, 110.497 )

[node name="Position2D12" type="Position2D" parent="."]

transform/pos = Vector2( 69.9812, 114.18 )

[node name="Position2D11" type="Position2D" parent="."]

transform/pos = Vector2( -1.22766, 125.229 )


